# healthos

./: .gitignore  CLAUDE.md  Procfile
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  retry.py  telegram.py
backend/app/ai/: ask_agent.py  context_builder.py  gemini.py  parser.py  rolling_state.py  scan_parser.py  weekly_review.py
backend/app/db/: client.py
backend/app/ingestion/: hevy.py
backend/app/routes/: ingest.py  jobs.py  query.py
supabase/: config.toml
supabase/migrations/: 20260531053515_create_all_tables.sql  20260531140000_add_nutrition_nudge_cron.sql  20260531150000_set_app_config.sql  20260601000000_update_cron_schedules.sql  20260601010000_update_cron_jobs.sql  20260602010000_add_run_readonly_query.sql
telegram_bot/: bot.py
